--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>URRIOLA PARADA Ulrich</title>
-  <base href="https://uurriola.github.io/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://uurriola.github.io">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.ea735bc50a6f1d23904a.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.cdfb0ddb511f65fdc0a0.js" type="module"></script><script src="runtime-es5.cdfb0ddb511f65fdc0a0.js" nomodule defer></script><script src="polyfills-es5.0290b245fbcca09184ac.js" nomodule defer></script><script src="polyfills-es2015.ffa9bb4e015925544f91.js" type="module"></script><script src="scripts.ad938cbe55a29afd71c6.js" defer></script><script src="main-es2015.b6b5af6a876444ae80e5.js" type="module"></script><script src="main-es5.b6b5af6a876444ae80e5.js" nomodule defer></script></body>
+<script src="runtime-es2015.cdfb0ddb511f65fdc0a0.js" type="module"></script><script src="runtime-es5.cdfb0ddb511f65fdc0a0.js" nomodule defer></script><script src="polyfills-es5.0290b245fbcca09184ac.js" nomodule defer></script><script src="polyfills-es2015.ffa9bb4e015925544f91.js" type="module"></script><script src="scripts.ad938cbe55a29afd71c6.js" defer></script><script src="main-es2015.388a0052d07a99270628.js" type="module"></script><script src="main-es5.388a0052d07a99270628.js" nomodule defer></script></body>
 </html>
